--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       {text: "Omo! Are you serious? 😅", img: "https://i.imgur.com/XbD6d8y.png"},
       {text: "I see… tough luck for Yemi 💔", img: "https://i.imgur.com/V3VxQmT.png"},
       {text: "No? But I baked imaginary cookies for you! 🍪", img: "https://i.imgur.com/dJxj5C9.png"},
-      {text: "im so sad! 😭", img: "https://i.imgur.com/Q5wG7bf.png"}
+      {text: "You’ll regret this, Amaka! 😎", img: "https://i.imgur.com/Q5wG7bf.png"}
     ];
 
     function yesResponse() {
