--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
   <script>
     const noReplies = [
+      {text: "I know say amaka dey always disappoint but no disappoint me abeg 😭…", img: "https://imageresizer.com/meme-generator/edit/Disappointed-Dog"},
       {text: "Oh no 😭… Yemi is heartbroken!", img: "https://i.imgur.com/1Q1ZQ8R.png"},
       {text: "Omo! Are you serious? 😅", img: "https://i.imgur.com/XbD6d8y.png"},
-      {text: "I see… tough luck for Yemi 💔", img: "https://i.imgur.com/V3VxQmT.png"},
-      {text: "No? But I baked imaginary cookies for you! 🍪", img: "https://i.imgur.com/dJxj5C9.png"},
-      {text: "You’ll regret this, Amaka! 😎", img: "https://i.imgur.com/Q5wG7bf.png"}
+      {text: "Pretty please 💔", img: "https://i.imgur.com/V3VxQmT.png"},
+      
     ];
 
     function yesResponse() {
