--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 
   <script>
     const noReplies = [
-      {text: "Oh no 😭… Yemi is heartbroken!", img: "https://raw.githubusercontent.com/YOUR-USERNAME/valentine/main/heartbroken.png"},
+      {text: "Oh no 😭… Yemi is heartbroken!", img: "https://raw.githubusercontent.com/wildchild69me-hub/valentine/refs/heads/main/EIq-j2vXUAAo_If.jpg"},
       {text: "Omo! Are you serious? 😅", img: "https://raw.githubusercontent.com/YOUR-USERNAME/valentine/main/funny.png"},
-      {text: "I see… tough luck for Yemi 💔", img: "https://raw.githubusercontent.com/YOUR-USERNAME/valentine/main/sad.png"},
-      {text: "No? But I baked imaginary cookies for you! 🍪", img: "https://raw.githubusercontent.com/YOUR-USERNAME/valentine/main/cookie.png"},
-      {text: "You’ll regret this, Amaka! 😎", img: "https://raw.githubusercontent.com/YOUR-USERNAME/valentine/main/funny2.png"}
+      {text: "pretty please💔", img: "https://github.com/wildchild69me-hub/valentine/blob/main/sad-cat-e963aa04f163b1b2ecdc0a24e0ac53fa-meme.jpeg?raw=true"},
+      {text: "i know your name is amaka but dont disappoint me😭", img: "https://github.com/wildchild69me-hub/valentine/blob/main/sad.jpg?raw=true"},
+      
     ];
 
     const yesBtn = document.getElementById('yesBtn');
