--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <script>
     const noReplies = [
-      {text: "Oh no 😭… Yemi is heartbroken!", img: "https://raw.githubusercontent.com/wildchild69me-hub/valentine/refs/heads/main/EIq-j2vXUAAo_If.jpg"},
+      {text: "Oh no 😭.. Yemi is heartbroken!", img: "https://raw.githubusercontent.com/wildchild69me-hub/valentine/refs/heads/main/EIq-j2vXUAAo_If.jpg"},
       {text: "Omo! Are you serious? 😅", img: "https://raw.githubusercontent.com/YOUR-USERNAME/valentine/main/funny.png"},
       {text: "pretty please💔", img: "https://github.com/wildchild69me-hub/valentine/blob/main/sad-cat-e963aa04f163b1b2ecdc0a24e0ac53fa-meme.jpeg?raw=true"},
       {text: "i know your name is amaka but dont disappoint me😭", img: "https://github.com/wildchild69me-hub/valentine/blob/main/sad.jpg?raw=true"},
